--- a/home.html
+++ b/home.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
 </head>
 <body class="bg-dark">
+    
     <div class="container my-4 col-lg-6">
         <h1 class="text-center text-white">github finder...</h1>
     </div>
+
     <div class="container mt-3 col-lg-6">
         <form action="" id="form">
             <div class="form-group">
@@ -19,6 +22,7 @@
             <button type="submit" class="btn btn-primary col-lg">find</button>
         </form>
     </div>
+
     <div class="container col-lg-6 my-3" id="res">
             <table class="table table-striped table-dark">
                     <tbody id="tb">
@@ -32,7 +36,9 @@
         <!-- dynamic repo data -->
     </div>
     
+    <!-- custom js -->
     <script src="./main.js"></script>
+    <!-- bootstrap js -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
